# nanny

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  uninstall.ps1
.cargo/: config.toml
.github/workflows/: ci-python.yml  ci-rust.yml  ci.yml  release.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  network.rs
crates/cli/: Cargo.toml
crates/cli/src/: events.rs  lib.rs  main.rs  runtime.rs
crates/cli/src/commands/: certs.rs  health.rs  mod.rs  server.rs
crates/cli/tests/: macro_integration.rs  process_lifecycle.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/agent/: limits.rs  mod.rs  state.rs
crates/core/src/engine/: executor.rs
crates/core/src/events/: event.rs  mod.rs
crates/core/src/ledger/: mod.rs
crates/core/src/loop_/: executor.rs  mod.rs
crates/core/src/policy/: mod.rs
crates/core/src/tool/: mod.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: enforcement.rs  lib.rs
crates/runtime/src/tools/: http_get.rs  mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
docs/: AGENTS.md  CONTRIBUTING.md  README.md  docs.json  index.mdx  init.mdx  introduction.mdx  mint.json  quickstart.mdx  run.mdx  uninstall.mdx
docs/concepts/: event-log.mdx  how-it-works.mdx  limits.mdx
docs/guides/: python-sdk.mdx  rust-sdk.mdx
docs/reference/: cli.mdx  events.mdx  nanny-toml.mdx
docs/v0.1/: index.mdx  init.mdx  install.mdx  quickstart.mdx  run.mdx  uninstall.mdx
docs/v0.1/concepts/: event-log.mdx  how-it-works.mdx  limits.mdx
docs/v0.1/guides/: python-sdk.mdx
docs/v0.1/install/: windows.mdx
docs/v0.1/reference/: events.mdx  nanny-toml.mdx
docs/v0.2/: index.mdx  init.mdx  quickstart.mdx  run.mdx  uninstall.mdx
docs/v0.2/concepts/: event-log.mdx  how-it-works.mdx  limits.mdx
docs/v0.2/guides/: governance-server.mdx  http-proxy-mode.mdx  python-sdk.mdx  rust-sdk.mdx
docs/v0.2/reference/: cli-certs.mdx  cli-health.mdx  cli-server.mdx  events.mdx  nanny-toml.mdx
examples/python/dev_assist/: .env.example  .gitignore  README.md  demo-budget-exhausted.tape  demo-max-steps.tape  demo-rule-denied.tape  demo-tool-denied.tape  nanny.toml  pyproject.toml
examples/python/dev_assist/dev_assist/: __init__.py  config.py
examples/python/dev_assist/dev_assist/agents/: __init__.py  debug.py
examples/python/dev_assist/dev_assist/cli/: __init__.py  main.py  output.py
examples/python/dev_assist/dev_assist/tools/: __init__.py  file_reader.py  ripgrep.py  write_file.py
examples/python/dev_assist/fixtures/: sample_trace.txt
examples/python/dev_assist/fixtures/sample_project/: auth.py  middleware.py  normalizer.py  pipeline.py  router.py  server.py
examples/python/lc_dev_assist/: agent.py  cli.py  nanny.toml  output.py  pyproject.toml  test_tools.py  tools.py
examples/python/metrics_crew/: .env.example  .gitignore  README.md  demo-agent-scopes.tape  demo-budget-exhausted.tape  demo-max-steps.tape  demo-rule-denied.tape  demo-tool-denied.tape  nanny.toml  pyproject.toml
examples/python/metrics_crew/fixtures/: sample_metrics.csv
examples/python/metrics_crew/metrics_crew/: config.py  crew.py  data.py
examples/python/metrics_crew/metrics_crew/agents/: __init__.py  analysis.py  ingestion.py  reporter.py  visualization.py
examples/python/metrics_crew/metrics_crew/cli/: main.py  output.py
examples/python/metrics_crew/metrics_crew/tools/: __init__.py  compute_stats.py  correlate_signals.py  detect_anomalies.py  generate_chart.py  load_metrics.py  validate_schema.py  write_report.py
examples/rust/qabud/: .env.example  Cargo.toml  README.md  demo-budget-exhausted.tape  demo-max-steps.tape  demo-rule-denied.tape  nanny.toml
examples/rust/qabud/src/: collector.rs  main.rs  rules.rs
examples/rust/qabud/tests/fixtures/loop-test/: file_5.rs  file_6.rs  file_8.rs  file_9.rs
examples/rust/webdingo/: .env.example  Cargo.toml  README.md  demo-agent-scopes.tape  demo-budget-exhausted.tape  demo-timeout.tape  nanny.toml
examples/rust/webdingo/src/: main.rs
homebrew/: nannyd.rb
samples/rust/qabud/: Cargo.toml  README.md  nanny.toml
samples/rust/qabud/src/: main.rs
samples/rust/qabud/tests/fixtures/loop-test/: file_1.rs  file_2.rs  file_3.rs  file_4.rs  file_7.rs
samples/rust/webdingo/: .env.example  .gitignore  Cargo.toml  README.md  nanny.toml
samples/rust/webdingo/src/: main.rs
sdks/python/: README.md  pyproject.toml
sdks/python/nanny_sdk/: __init__.py  _client.py  _context.py  _decorators.py  exceptions.py
sdks/python/tests/: conftest.py  test_agent.py  test_client.py  test_exceptions.py  test_passthrough.py  test_rule.py  test_tool.py
