[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/runtime",
    "crates/config",
    "crates/bridge",
    "crates/macros",
    "crates/cli",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/nanny-run/nanny"
authors     = ["Evans Ibok <evansibok@gmail.com>"]

# Shared dependency versions — pin once, inherit everywhere.
[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
thiserror    = "1"
anyhow       = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
clap         = { version = "4", features = ["derive"] }
