[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/runtime",
    "crates/config",
    "crates/bridge",
    "crates/macros",
    "crates/cli",
]

[workspace.package]
version     = "0.1.3"
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/nanny-run/nanny"
authors     = ["Evans Ibok <evansibok@gmail.com>"]

# Shared dependency versions — pin once, inherit everywhere.
[workspace.dependencies]
# Internal crates — path + version kept in sync with [workspace.package] version.
nanny-core    = { path = "crates/core",    version = "0.1.3" }
nanny-config  = { path = "crates/config",  version = "0.1.3" }
nanny-macros  = { path = "crates/macros",  version = "0.1.3" }
nanny-runtime = { path = "crates/runtime", version = "0.1.3" }
nanny-bridge  = { path = "crates/bridge",  version = "0.1.3" }
# External dependencies
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
thiserror    = "1"
anyhow       = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
clap         = { version = "4", features = ["derive"] }
