[package]
name        = "nanny-bridge"
description = "HTTP sidecar bridge for the nanny execution boundary — internal runtime component"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
nanny-core    = { workspace = true }
nanny-runtime = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

# TCP transport — only needed on Windows (non-Unix). On macOS/Linux we use
# a Unix domain socket, which requires no external crate.
[target.'cfg(not(unix))'.dependencies]
tiny_http = "0.12"
