[package]
name        = "nannyd"
description = "Nanny — execution boundary for AI agents. CLI (nanny run) and Rust SDK (#[tool], #[rule], #[agent])."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[[bin]]
name = "nanny"
path = "src/main.rs"

[lib]
name = "nanny"
path = "src/lib.rs"

[dependencies]
nanny-core    = { path = "../core",    version = "0.1.0" }
nanny-config  = { path = "../config",  version = "0.1.0" }
nanny-runtime = { path = "../runtime", version = "0.1.0" }
nanny-bridge  = { path = "../bridge",  version = "0.1.0" }
nanny-macros  = { path = "../macros",  version = "0.1.0" }
inventory    = "0.3"
anyhow       = { workspace = true }
clap         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
nanny-bridge   = { path = "../bridge",  version = "0.1.0" }
nanny-core     = { path = "../core",    version = "0.1.0" }
nanny-runtime  = { path = "../runtime", version = "0.1.0" }
