[package]
name        = "nannyd"
description = "Nanny — execution boundary for AI agents. CLI (nanny run) and Rust SDK (#[tool], #[rule], #[agent])."
readme       = "../../README.md"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[[bin]]
name = "nanny"
path = "src/main.rs"

[lib]
name = "nanny"
path = "src/lib.rs"

[dependencies]
nanny-core    = { workspace = true }
nanny-config  = { workspace = true }
nanny-runtime = { workspace = true }
nanny-bridge  = { workspace = true }
nanny-macros  = { workspace = true }
inventory    = "0.3"
anyhow       = { workspace = true }
clap         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
nanny-bridge   = { workspace = true }
nanny-core     = { workspace = true }
nanny-runtime  = { workspace = true }
