[package]
name        = "nanny-config"
description = "Nanny configuration — nanny.toml parsing and validation"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish              = false

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
thiserror = { workspace = true }
