[package]
name        = "nanny-core"
description = "Nanny execution loop, state machine, and event system"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
