[package]
name        = "nanny-core"
description = "Core traits and types for the nanny execution boundary"
publish     = false
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
