[package]
name        = "nanny-ledger"
description = "Nanny ledger trait and in-memory fake implementation"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
nanny-core = { path = "../core" }
thiserror  = { workspace = true }
