[package]
name        = "nanny-policy"
description = "Nanny policy engine — pure functions, no side effects"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish              = false

[dependencies]
nanny-core = { path = "../core" }
thiserror  = { workspace = true }
