[package]
name        = "nanny-runtime"
description = "Nanny local runtime — concrete implementations of the nanny-core contracts"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
[dependencies]
nanny-core = { path = "../core", version = "0.1.0" }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
ureq       = "2"
