[package]
name        = "nanny-tools"
description = "Nanny tool trait and built-in tool implementations"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish              = false

[dependencies]
nanny-core = { path = "../core" }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
ureq       = "2"
