[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanny-sdk"
version = "0.1.5"
description = "Python SDK for the Nanny execution boundary — @tool, @rule, @agent decorators"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["nanny_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
