[project]
name = "dev-assist"
version = "0.1.0"
description = "dev_assist — LangGraph debug agent governed by Nanny"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "langchain-core>=0.3",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
    "nanny-sdk",
]

[tool.uv.sources]
nanny-sdk = { path = "../../../sdks/python" }

[project.scripts]
dev = "dev_assist.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
