[project]
name = "lc-dev-assist"
version = "0.1.0"
description = "dev_assist — LangChain debug agent governed by Nanny"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "typer>=0.12",
    "rich>=13",
    "nanny-sdk",
]

[tool.uv.sources]
nanny-sdk = { path = "../../../sdks/python", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
