[project]
name = "metrics-crew"
version = "0.1.0"
description = "metrics_crew — CrewAI incident analysis pipeline governed by Nanny"
requires-python = ">=3.11"
dependencies = [
    "crewai[litellm]>=0.80",
    "pandas>=2",
    "plotly>=5",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
    "nanny-sdk==0.1.8",
]

[project.scripts]
metrics-crew = "metrics_crew.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
