[workspace]

[package]
name = "qabud"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nanny-run/nanny"
authors = ["Evans Ibok <evansibok@gmail.com>"]

[dependencies]
anyhow = "1"
dotenvy = "0.15.7"
nannyd = "0.1.3"
rig-core = "0.33.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.50.0", features = ["full"] }
