[package]
name = "webdingo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy = "0.15.7"
nannyd = { version = "0.1.1", path = "../../../crates/cli" }
reqwest = { version = "0.13.2", features = ["blocking"] }
rig-core = "0.33.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.50.0", features = ["full"] }
